--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,14 @@
+/* -- START APP STYLES -- */
 
+.main {
+    background-color: whitesmoke;
+    
+    &-container {
+        margin: 0 auto;
+        width: 90%;
+        padding: 2em 0;
+    }
+
+}
+
+/* -- END APP STYLES -- */
