--- a/src/components/FilmsComponent/FilmsComponent.scss
+++ b/src/components/FilmsComponent/FilmsComponent.scss
@@ -1,61 +1,59 @@
-*{
-    margin: 0 auto;
-    box-sizing: border-box;
-    padding-inline-start: 0;
-}
-.div__section{
-    // background-color: pink;
-    display:flex;
-    align-items: flex-start;
-    flex-direction: row;
+// *{
+    // margin: 0 auto;
+    // box-sizing: border-box;
+    // padding-inline-start: 0;
+// }
+// .div__section{
+    // // background-color: pink;
+    // display:flex;
+    // align-items: flex-start;
+    // flex-direction: row;
 
-    &__ul{
-        display:flex;
-        justify-content:flex-start;
-        width: 90%;
-        align-items: flex-start;
-        padding: 2%;
-        &__li{
-            //   background-color: aquamarine;
-          display: flex;
-          width: calc(35%);
-          margin: 1%;
-          flex-direction: column;
-          align-items: center;
+    // &__ul{
+        // display:flex;
+        // justify-content:flex-start;
+        // width: 90%;
+        // align-items: flex-start;
+        // padding: 2%;
+        // &__li{
+            // //   background-color: aquamarine;
+          // display: flex;
+          // width: calc(35%);
+          // margin: 1%;
+          // flex-direction: column;
+          // align-items: center;
         
-          &__div{
-            // background-color: blue; 
-            margin: 2%;
+          // &__div{
+            // // background-color: blue; 
+            // // margin: 2%;
             
-          }
-        }
-      }
-}
-.section__div{
-    // display: flex;
-    // padding: 2%;
-    background-color: bisque;
-    flex-direction: column;
-    justify-items: flex-start;
+          // }
+        // }
+      // }
+// }
+// .section__div{
+    // // display: flex;
+    // // padding: 2%;
+    // // background-color: bisque;
+    // flex-direction: column;
+    // justify-items: flex-start;
     
-    &__wrapper{
-        // background-color: red;
-        display:flex;
-        align-items: flex-end;
-        justify-content: left;
-        // gap: 1em;
+    // &__wrapper{
+        // // background-color: red;
+        // display:flex;
+        // align-items: flex-end;
+        // justify-content: left;
+        // // gap: 1em;
     
-        &__title{
-         padding: 1%;
-         height: 50px;
-         background-color: blueviolet;
-         margin: 1%;
-        }
-    }
+        // &__title{
+        //  padding: 1%;
+        //  height: 50px;
+        // //  background-color: blueviolet;
+        //  margin: 1%;
+        // }
+    // }
 
-}
-
-
+// }
 
 
 
@@ -64,11 +62,13 @@
 
 
 
-img{
-    max-width: 400px;
-    object-fit: cover;
-    height: 500px;
-}
+
+
+// // img{
+    // // max-width: 400px;
+    // // object-fit: cover;
+    // // height: 500px;
+// // }
 
 
 
