genre films and black background color

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
 /* -- START APP STYLES -- */
-
 .main {
-    background-color: whitesmoke;
+    // background-color: whitesmoke;
+    background-color: rgb(23, 22, 22);
+    color: white;
     
     &-container {
         margin: 0 auto;
