Minimal styles changes

--- a/src/components/GenreComponent/GenreComponent.scss
+++ b/src/components/GenreComponent/GenreComponent.scss
@@ -1,8 +1,4 @@
-
-*{
-    margin: 0 auto;
-    padding-inline-start: 0;
-}
+/* -- START GENRECOMPONENT STYLES -- */
 
 .div__wrapper{
     display:flex;
@@ -19,3 +15,5 @@
         }
     }
 }
+
+/* -- END GENRECOMPONENT STYLES -- */
