--- a/src/components/SingleFilmComponent/SingleFilmComponent.scss
+++ b/src/components/SingleFilmComponent/SingleFilmComponent.scss
@@ -1,3 +1,45 @@
 /* -- START SINGLEFILMCOMPONENT STYLES -- */
+.section__detail{
+ display:flex;
+//  position: relative;
+
+ &__div{
+    // background-color: pink;
+    &__button__watch{
+            background-color: #02ffa1;
+            font-size: 1.25rem;
+            padding: 0 1.5rem;
+            height: 3.5rem;
+            user-select: none;
+            border: none;
+            border-radius: 0.25rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            &:hover{
+                background-color: #42ffba;
+            }
+          
+    }
+    &__img__bg{
+        // position:absolute;
+        // mix-blend-mode:luminosity;
+        // width: 100%;
+        // height: 70%;
+        // object-fit: cover;
+        // object-position: center;
+
+
+    }
+    &__img__pstr{
+        // position:relative;
+        width: 10%;
+        // top: 30%;
+    }
+    &__wrapper__title{
+        position: relative;
+        // bottom: 90%;
+    }
+ }
+}
 
 /* -- END SINGLEFILMCOMPONENT STYLES -- */
