--- a/src/components/NavigationComponent/NavigationComponent.scss
+++ b/src/components/NavigationComponent/NavigationComponent.scss
@@ -8,6 +8,8 @@
     }
 
     &__link {
+        font-family: 'Poppins', sans-serif;
+        text-transform: uppercase;
         color: #101010;
         font-weight: bold;
 
