--- a/src/components/AllFilmsComponent/AllFilmsComponent.scss
+++ b/src/components/AllFilmsComponent/AllFilmsComponent.scss
@@ -3,33 +3,41 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background-color: blue;
-    justify-items:center;
+    // background-color: blue;
+ 
+    
 }
+
 .section__wrapper{
-    background-color: red;
+    // background-color: red;
     display:flex;
     justify-content: center;
     margin: 0 auto;
 
+
     &__div{
-        background-color: pink;
+        // background-color: pink;
         display:flex;
-        gap: 1em;
         padding-inline-start: 0;
         flex-wrap: nowrap;
         flex-direction: column;
-        
+        align-items: flex-start;
         padding: 1%;
     &__img{
-        width: 300px;
-        height: 400px;
+         width: 80%;
         
     }
         &__title{
          display:flex;
-         flex-wrap: wrap;
-         background-color: aqua;
+         flex-wrap: nowrap;
+         text-align: justify;
+         position: relative;
+        //  background-color: aqua;
+      
+        }
+        &__h4{
+          
+            
         }
 }
 
