Agregado texto al about y cambios minimos

--- a/src/components/NavigationComponent/NavigationComponent.scss
+++ b/src/components/NavigationComponent/NavigationComponent.scss
@@ -10,7 +10,7 @@
     &__link {
         font-family: 'Poppins', sans-serif;
         text-transform: uppercase;
-        color: #101010;
+        color: white;
         font-weight: bold;
 
         &:hover {
