--- a/src/layout/HeaderComponent/HeaderComponent.scss
+++ b/src/layout/HeaderComponent/HeaderComponent.scss
@@ -1,7 +1,8 @@
 /* -- START HEADERCOMPONENT STYLES -- */
 
 .header {
-    background-color: #e5e5e5;
+    background-color: #101010;
+    color: white;
     
     &-container {
         margin: 0 auto;
