--- a/src/components/SearcherComponent/SearcherComponent.scss
+++ b/src/components/SearcherComponent/SearcherComponent.scss
@@ -1,1 +1,38 @@
-.SearcherComponent {}
+
+.box{
+    position: relative;
+}
+
+.input {
+    padding: 10px;
+    width: 80px;
+    height: 50px;
+    background: none;
+    border: 4px solid #02ffa1;
+    border-radius: 50px;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;;
+    font-size: 22px;
+    color: #02ffa1;
+    outline: none;
+    transition: .5s;
+ 
+}
+.box:hover input{
+    width: 250px;
+    background: #3b3640;
+    border-radius: 10px;
+}
+.box i{
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    transform: translate(-50%,-50%);
+    font-size: 26px;
+    color: #02ffa1;
+    transition: .2s;
+}
+.box:hover i{
+    opacity: 0;
+    z-index: -1;
+}
