--- a/src/components/SearcherComponent/SearcherComponent.scss
+++ b/src/components/SearcherComponent/SearcherComponent.scss
@@ -1,32 +1,60 @@
 
+
+.div__searcher{
+    display:flex;
+    background-color: pink;
+    flex-direction: column;
+    flex-wrap: wrap;
+     padding: 5%;
+    justify-content: center;
+    align-items: center;
+    &__div{
+         background-color: rgb(208, 57, 83);
+         margin: 1em;
+       
+         &__title{
+            background-color: red;
+            color: white;
+        }
+    }
+
+}
+.section__results{
+    display:flex;
+    flex-direction: column;
+}
 .box{
     position: relative;
+    // background-color: red;
+
+    &__search__input{
+    
+            padding: 10px;
+            width: 80px;
+            height: 2.5rem;
+            background: none;
+            border: 4px solid #02ffa1;
+            border-radius: 10px;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;;
+            font-size: 16px;
+            color: #02ffa1;
+            outline: none;
+            transition: .5s;
+            
+         
+    }
 }
 
-.input {
-    padding: 10px;
-    width: 80px;
-    height: 50px;
-    background: none;
-    border: 4px solid #02ffa1;
-    border-radius: 50px;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;;
-    font-size: 22px;
-    color: #02ffa1;
-    outline: none;
-    transition: .5s;
- 
-}
 .box:hover input{
-    width: 250px;
+    width: 200px;
     background: #3b3640;
     border-radius: 10px;
 }
 .box i{
-    position: absolute;
-    top: 50%;
-    right: 15px;
+    // position: absolute;
+    // top: 50%;
+    // right: 15px;
     transform: translate(-50%,-50%);
     font-size: 26px;
     color: #02ffa1;
