--- a/src/components/SingleFilmComponent/SingleFilmComponent.scss
+++ b/src/components/SingleFilmComponent/SingleFilmComponent.scss
@@ -7,13 +7,14 @@
     // background-color: pink;
     &__button__watch{
             background-color: #02ffa1;
-            font-size: 1.25rem;
+            font-size: 1.2rem;
             padding: 0 1.5rem;
-            height: 3.5rem;
+            height: 2.5rem;
             user-select: none;
             border: none;
             border-radius: 0.25rem;
             font-weight: 600;
+            margin-left: 10px;
             text-transform: uppercase;
             &:hover{
                 background-color: #42ffba;
