--- a/src/components/SingleFilmComponent/SingleFilmComponent.scss
+++ b/src/components/SingleFilmComponent/SingleFilmComponent.scss
@@ -9,24 +9,32 @@
             background-color: #02ffa1;
             font-size: 1.25rem;
             padding: 0 1.5rem;
-            height: 3.5rem;
+            height: 2.5rem;
             user-select: none;
             border: none;
             border-radius: 0.25rem;
             font-weight: 600;
             text-transform: uppercase;
+            
             &:hover{
                 background-color: #42ffba;
             }
           
+            &__link{
+                font-weight: 600;
+                text-transform: uppercase;
+                font-size: 1.25rem;
+                // background-color: pink;
+                
+            }
     }
     &__img__bg{
-        // position:absolute;
-        // mix-blend-mode:luminosity;
-        // width: 100%;
-        // height: 70%;
-        // object-fit: cover;
-        // object-position: center;
+       
+       
+       
+       
+       
+       
 
 
     }
