--- a/src/components/PopularFilmsComponent/PopularFilmsComponent.scss
+++ b/src/components/PopularFilmsComponent/PopularFilmsComponent.scss
@@ -1,3 +1,13 @@
 /* -- START POPULARFILMSCOMPONENT STYLES -- */
 
+.popular-films {
+
+    &__img {
+        transition: transform 0.3s;
+        &:hover {
+            transform: scale(1.2);
+        }
+    }
+}
+
 /* -- END POPULARFILMSCOMPONENT STYLES -- */
