--- a/src/components/SingleFilmComponent/SingleFilmComponent.scss
+++ b/src/components/SingleFilmComponent/SingleFilmComponent.scss
@@ -34,13 +34,18 @@
 
     }
     &__img__pstr{
-         position:absolute;
+        //  position:absolute;
          width: 10%;
          right: 90%;
          top: 50%;
+         &:hover{
+        
+        
+           
+         }
     }
     &__wrapper__popularity{
-         position: absolute;
+        //  position: absolute;
         display: flex;
         background-color: rgb(14, 13, 13);
         width:85px;
@@ -58,17 +63,17 @@
         border-radius: 20px;
         // border: 8px solid rgb(95, 95, 95);
         width:160px;
-        bottom: 22%;
-        left: 11%;
+        bottom: 20%;
+        left: 10%;
         display: flex;
     }
     &__wrapper__ovvw{
-        position: absolute;
+        // position: absolute;
         bottom: 10%;
     }
     &__wrapper__title{
         position: absolute;
-        bottom: 30%;
+        bottom: 25%;
         left: 11%;
         
     }
@@ -76,8 +81,7 @@
 
 }
 .div__wrapper__genre{
-    display:flex;
-     margin: 1%;
+    //   display:flex;
      width: 90px;
      align-items: flex-start;
     //   position: relative;
@@ -85,7 +89,7 @@
      left: 15%;
     &__h4{
         // background-color: red;
-        bottom: 10%;
+        // bottom: 10%;
         }
     }
 
