--- a/src/components/SingleFilmComponent/SingleFilmComponent.scss
+++ b/src/components/SingleFilmComponent/SingleFilmComponent.scss
@@ -1,96 +1,113 @@
 /* -- START SINGLEFILMCOMPONENT STYLES -- */
 .section__detail{
- display:flex;
-  position: relative;
-//  background-color: pink;
- &__div{
+position: relative;
+display:flex;
 
-    //  background-color: rgb(129, 98, 104);
-    &__button__watch{
-            background-color: #02ffa1;
-            font-size: 1.25rem;
-            padding: 0 1.5rem;
-            height: 2.5rem;
-            user-select: none;
-            border: none;
-            border-radius: 0.25rem;
-            font-weight: 600;
-            text-transform: uppercase;
+ }   
+.detail__info{
+      
+      position: absolute;
+      z-index: 1;
+      top:0;
+      left: 0;  
+      display:flex;
+      flex-wrap: nowrap;
+      
+      
+       }
+
+.detail__img-bg{
+
+}
+.detail__info__pstr{
+        width: 10%;
+    }
+    //  }
+    // //  background-color: rgb(129, 98, 104);
+    // __button__watch{
+            // background-color: #02ffa1;
+            // font-size: 1.25rem;
+            // padding: 0 1.5rem;
+            // height: 2.5rem;
+            // user-select: none;
+            // border: none;
+            // border-radius: 0.25rem;
+            // font-weight: 600;
+            // text-transform: uppercase;
             
-            &:hover{
-                background-color: #42ffba;
-            }
+            // &:hover{
+                // background-color: #42ffba;
+            // }
           
-            &__link{
-                font-weight: 600px;
-                text-transform: uppercase;
-                font-size: 1.25rem;
-                color: black;
+            // &__link{
+                // font-weight: 600px;
+                // text-transform: uppercase;
+                // font-size: 1.25rem;
+                // color: black;
                 
-            }
-    }
-    &__img__bg{
-     position: relative;
+            // }
+    // }
 
-    }
-    &__img__pstr{
-        //  position:absolute;
-         width: 10%;
-         right: 90%;
-         top: 50%;
-         &:hover{
+    // &__img__bg{
+    // //  position: relative;
+
+    // }
+    // &__img__pstr{
+        // //  position:absolute;
+        //  width: 10%;
+        //  right: 90%;
+        //  top: 50%;
+        //  &:hover{
         
         
            
-         }
-    }
-    &__wrapper__popularity{
-        //  position: absolute;
-        display: flex;
-        background-color: rgb(14, 13, 13);
-        width:85px;
-        border-radius: 20px;
-        border: 8px solid rgb(95, 95, 95);
-        padding: 10px;
-        bottom: 50%;
-        
-        // padding-right: 2px;
-    }
-    &__wrapper__year{
-        position: absolute;
+        //  }
+    // }
+    // &__wrapper__popularity{
+        // //  position: absolute;
+        // display: flex;
         // background-color: rgb(14, 13, 13);
-        padding: 10px;
-        border-radius: 20px;
+        // width:85px;
+        // border-radius: 20px;
         // border: 8px solid rgb(95, 95, 95);
-        width:160px;
-        bottom: 20%;
-        left: 10%;
-        display: flex;
-    }
-    &__wrapper__ovvw{
-        // position: absolute;
-        bottom: 10%;
-    }
-    &__wrapper__title{
-        position: absolute;
-        bottom: 25%;
-        left: 11%;
+        // padding: 10px;
+        // bottom: 50%;
         
-    }
- }
-
-}
-.div__wrapper__genre{
-    //   display:flex;
-     width: 90px;
-     align-items: flex-start;
-    //   position: relative;
-     bottom: 40%;
-     left: 15%;
-    &__h4{
-        // background-color: red;
+        // // padding-right: 2px;
+    // }
+    // &__wrapper__year{
+        // position: absolute;
+        // // background-color: rgb(14, 13, 13);
+        // padding: 10px;
+        // border-radius: 20px;
+        // // border: 8px solid rgb(95, 95, 95);
+        //  width:160px;
+        //  bottom:35%;
+        // left: 10%;
+        // display: flex;
+    // }
+    // &__wrapper__ovvw{
+        // // position: absolute;
         // bottom: 10%;
-        }
-    }
+    // }
+    // &__wrapper__title{
+        // position: absolute;
+        //  bottom: 45%;
+        // left: 11%;
+        
+    // }
+ 
+// .div__wrapper__genre{
+    // //   display:flex;
+    //  width: 90px;
+    //  align-items: flex-start;
+    // //   position: relative;
+    //  bottom: 40%;
+    //  left: 15%;
+    // &__h4{
+        // // background-color: red;
+        // // bottom: 10%;
+        // }
+    // }
 
 /* -- END SINGLEFILMCOMPONENT STYLES -- */
