--- a/src/components/LoginComponent/LoginComponent.scss
+++ b/src/components/LoginComponent/LoginComponent.scss
@@ -1,3 +1,34 @@
 /* -- START LOGINCOMPONENT STYLES -- */
 
+.login {
+    
+    margin: 0 auto;
+    padding: 1em;
+    width: 650px;
+    background-color: whitesmoke;
+    color: black;
+    padding: 0 2em 2em;
+    box-shadow: 0px 5px 0px #02ffa1;
+
+    &__h1 {
+        color: white;
+        text-align: center;
+    }
+
+    &__h2 {
+        text-align: center;
+        margin: 0;
+        padding: 1em 0;
+    }
+}
+
+.form {
+    
+    &__label {
+        display: flex;
+        gap: 1em;
+        justify-content: center;
+    }
+}
+
 /* -- END LOGINCOMPONENT STYLES -- */
