--- a/src/pages/AboutPage/AboutPage.scss
+++ b/src/pages/AboutPage/AboutPage.scss
@@ -13,7 +13,8 @@
         padding: 0 2em 2em;
         background: whitesmoke;
         color: black;
-        box-shadow: 0px 5px 0px #02ffa1;
+        box-shadow: 0px 5px 0px #00e08e;
+        border-radius: .5em;
     }
 }
 
