--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -3,14 +3,30 @@
     width: 50%;
 
     &__user{
-        border-radius: 50%;
-        object-fit: cover;
-        object-position: top;
-        width: 300px;
-        height: 300px;
-         overflow: hidden;
-    }
+           border-radius: 100%;
+           object-fit: cover;
+           color: #000;
+           width: 280px;
+           height: 280px;
+           padding: 3%;
+           display: flex;
+
 }
+        &:hover{
+            background-color: #02ffa1;
+            background-size: cover;
+            object-fit: cover;
+            object-position: top;
+            border-radius: 100%;
+            object-fit: cover;
+            width: 280px;
+            height: 280px;
+
+
+        }
+
+    }
+
 
 .div{
     display:flex;
@@ -24,10 +40,5 @@
         font-family: 'Poppins', sans-serif;
         margin-bottom: 1%;
        
-
-    }
-
-    &__label{
-
     }
 }
