--- a/src/components/AllFilmsComponent/AllFilmsComponent.scss
+++ b/src/components/AllFilmsComponent/AllFilmsComponent.scss
@@ -3,17 +3,16 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    // background-color: blue;
+    margin: 0 auto;
 }
 
 .section__wrapper {
-    // background-color: red;
     display:flex;
     justify-content: center;
     margin: 0 auto;
+    align-items: space-around;
 
     &__div {
-        // background-color: pink;
         display:flex;
         padding-inline-start: 0;
         flex-wrap: nowrap;
@@ -22,7 +21,8 @@
         padding: 1%;
 
         &__img {
-            width: 80%;
+            width: 280px;
+            height: 400px;
             transition: transform 0.3s;
             &:hover {
                 transform: scale(1.2);
@@ -32,9 +32,9 @@
         &__title {
             display:flex;
             flex-wrap: nowrap;
-            text-align: justify;
-            position: relative;
-            //  background-color: aqua;
+            text-align:left;
+            height: 90px;
+            align-items: center;
         }
     }
 }
