--- a/src/components/SearcherComponent/SearcherComponent.scss
+++ b/src/components/SearcherComponent/SearcherComponent.scss
@@ -2,13 +2,15 @@
 
 .div__searcher{
     display:flex;
-flex-direction: column;
+    flex-direction: column;
+    
    
     &__div{
         margin: 1em;
         display: flex;
         flex-direction: row;
         width: calc(21%);
+        
        
         &__img{
            width: 300px;
@@ -38,8 +40,9 @@ flex-direction: column;
 }
 .box{
     position: relative; 
+    padding-bottom: 1%;
     &__search{
-
+         
         &__input{
             padding: 10px;
             width: 80px;
@@ -74,4 +77,7 @@ flex-direction: column;
 .box:hover i{
     opacity: 0;
     z-index: -1;
+}
+.section__detail__div__button__watch1{
+    margin-bottom: 2%;
 }
